# Types

./: .gitignore
Types/: CMakeLists.txt  Makefile  cmake_install.cmake
Types/include/: CMakeLists.txt  Makefile  cmake_install.cmake
Types/include/Types/: CMakeLists.txt  Makefile  cmake_install.cmake  generator.hpp  types.hpp
Types/source/: CMakeLists.txt  Makefile  cmake_install.cmake
Types/source/Types/: CMakeLists.txt  Makefile  cmake_install.cmake  types.cpp
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
